--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
 			<li><a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="./re.html"
 					target="_blank">放空</a></li>
 
-			<li><a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="https://music.163.com/"
+			<li><a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="./music/index.html"
 					target="_blank">音乐</a></li>
 
 			<li><a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="http://demo443.com:9527/"
