--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								
 								<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"
 									href="./data analysis/index.html" target="_blank">数据分析</a>
-								<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="http://demo443.com:4567/"
+								<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="http://demo520.com/"
 										target="_blank">博客测试</a>
 								<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"
 									href="./lishi/index.html" target="_blank">&nbsp &nbsp &nbsp</a>
@@ -768,7 +768,7 @@
 			<li><a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="./music/index.html"
 					target="_blank">音乐</a></li>
 
-			<li><a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="http://demo443.com:9527/"
+			<li><a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')" href="http://demo520.com/"
 					target="_blank">博客测试</a></li>
 			<li class="nbsp">
 				&nbsp;
