--- a/index.html
+++ b/index.html
@@ -718,14 +718,14 @@
 					<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"
 						href="https://beian.miit.gov.cn" target="_blank">
 						<span>
-							黔ICP备2021004952号
+							黔ICP备**********号
 						</span>
 					</a>
 					<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"
 						href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=52032102000646"
 						target="_blank">
 						<span>
-							<img src="./img/beian.png">公安备案号52032102000646
+							<img src="./img/beian.png">公安备案号**************
 						</span>
 					</a>
 				</div>
