--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
 									<ul>
 										<li>
 											<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"
-												href="http://www.demo443.com/cxx/" target="_blank">陈鑫鑫作品集</a>
+												href="./cxx/index.html" target="_blank">陈鑫鑫作品集</a>
 										</li>
 										<li>
 											<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"
