pictures_host_view

--- a/zs/index.html
+++ b/zs/index.html
@@ -22,6 +22,7 @@
 				width: 400px;
 
 			}
+
 			/* 底部流水灯文字样式 */
 			#kaiguandeng {
 				font-family: '楷体';
@@ -43,17 +44,17 @@
 				-webkit-background-size: 200% 100%;
 				-webkit-animation: masked-animation 2.5s infinite linear;
 			}
-			
+
 			@-webkit-keyframes masked-animation {
 				0% {
 					background-position: 0 0;
 				}
-			
+
 				100% {
 					background-position: -100% 0;
 				}
 			}
-			
+
 			#bott {
 				margin-bottom: 100px;
 				margin-top: 200px;
@@ -154,30 +155,31 @@
 			})(document);
 		</script> -->
 		<center>
-			<img src="http://photos.demo443.com/ykq/01.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/02.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/03.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/04.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/05.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/06.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/07.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/08.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/09.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/10.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/11.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/12.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/13.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/14.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/15.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/16.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/17.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/18.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/19.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/20.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/21.jpg" class="img-responsive">
-			<img src="http://photos.demo443.com/ykq/22.jpg" class="img-responsive">
+			<img src="./imgs/01.jpg" class="img-responsive">
+			<img src="./imgs/02.jpg" class="img-responsive">
+			<img src="./imgs/03.jpg" class="img-responsive">
+			<img src="./imgs/04.jpg" class="img-responsive">
+			<img src="./imgs/05.jpg" class="img-responsive">
+			<img src="./imgs/06.jpg" class="img-responsive">
+			<img src="./imgs/07.jpg" class="img-responsive">
+			<img src="./imgs/08.jpg" class="img-responsive">
+			<img src="./imgs/09.jpg" class="img-responsive">
+			<img src="./imgs/10.jpg" class="img-responsive">
+			<img src="./imgs/11.jpg" class="img-responsive">
+			<img src="./imgs/12.jpg" class="img-responsive">
+			<img src="./imgs/13.jpg" class="img-responsive">
+			<img src="./imgs/14.jpg" class="img-responsive">
+			<img src="./imgs/15.jpg" class="img-responsive">
+			<img src="./imgs/16.jpg" class="img-responsive">
+			<img src="./imgs/17.jpg" class="img-responsive">
+			<img src="./imgs/18.jpg" class="img-responsive">
+			<img src="./imgs/19.jpg" class="img-responsive">
+			<img src="./imgs/20.jpg" class="img-responsive">
+			<img src="./imgs/21.jpg" class="img-responsive">
+			<img src="./imgs/22.jpg" class="img-responsive">
 		</center>
-		<center id="bott"><a id="kaiguandeng" target="" href="" type="button">强电 | 弱电 | 综合维修 | 建网站 | 爬取数据 | 。。。。</a></div>
+		<center id="bott"><a id="kaiguandeng" target="" href="" type="button">强电 | 弱电 | 综合维修 | 建网站 | 爬取数据 | 。。。。</a>
+			</div>
 		</center>
 		<div id="outerdiv"
 			style="position:fixed;top:0;left:0;background:rgba(0,0,0,0.7);z-index:2;width:100%;height:100%;display:none;">
