备案号链接更改
备案号链接更改

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 						</span>
 					</a>
 					<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"
-						href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=52032102000646"
+						href="http://www.beian.gov.cn"
 						target="_blank">
 						<span>
 							<img src="./img/beian.png">公安备案号**************
