--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 										</li>
 										<li>
 											<a onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"
-												href="http://npm.taobao.org/mirrors/chromedriver/"
+												href="http://chromedriver.storage.googleapis.com/index.html"
 												target="_blank">chromedriver</a>
 											– 谷歌浏览器驱动
 										</li>
