--- a/404.html
+++ b/404.html
@@ -107,7 +107,7 @@ $(function() {
 
 	<div id="smash_page">
 		<h2>404页面</h2>
-		<h2>(别瞎输URL，咱这是正规网站，找不到你想的那种页面！！！！！)</h2>
+		<h2>！哦豁，找不到你要的页面！！！！！ (*^▽^*)</h2>
 	</div>
 
 	<div id="smash" style="bottom: -135px;">
