--- a/tool/index.html
+++ b/tool/index.html
@@ -8,7 +8,7 @@
 			content="与其坐在副驾驶，不如自己手握方向盘。会敲点代码，未来也想做点什么了不起的事情。喜欢折腾，更喜欢研究，迷失在从无到有的创造感之中….，我是杨晓东，欢迎志同道合之人和我一起研究，一起折腾。">
 
 
-		<title>杨晓东_个人导航</title>
+		<title>工具箱</title>
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="./css/index.css">
