--- a/music/index.html
+++ b/music/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="情绪回归、、、" />
 		<meta name="keywords" content="杨晓东,轻松一刻,情绪回归,音乐,放松" />
 		<meta name="author" content="杨晓东" />
-		<link rel="shortcut icon" href="http://photos.demo443.com/website_img/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 		<script src="assets/js/libs/jquery-1.10.0.js"></script>
 
 		<link href="assets/css/focus_style.css" media="screen" rel="stylesheet">
