--- a/tool/index.html
+++ b/tool/index.html
@@ -725,7 +725,7 @@
 						href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=52032102000646"
 						target="_blank">
 						<span>
-							<img src="./img/beian.png">公安备案号**************
+							<img src="./beian.png">公安备案号**************
 						</span>
 					</a>
 				</div>
