--- a/zs/index.html
+++ b/zs/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="favicon.ico">
-		<title>杨开群_证书</title>
+		<title>杨开群_技能证书</title>
 		<script src="./js/jQuery_3_6_0.js" type="text/javascript" charset="utf-8"></script>
 		<script src="./js/big.js" type="text/javascript" charset="utf-8"></script>
 		<style type="text/css">
@@ -178,7 +178,7 @@
 			<img src="./imgs/21.jpg" class="img-responsive">
 			<img src="./imgs/22.jpg" class="img-responsive">
 		</center>
-		<center id="bott"><a id="kaiguandeng" target="" href="" type="button">强电 | 弱电 | 综合维修 | 建网站 | 爬取数据 | 。。。。</a>
+		<center id="bott"><a id="kaiguandeng" target="" href="" type="button">强电 | 弱电 | 综合维修 | 建网站 | 爬取数据 | HTML5 & CSS3 & JavaScript | Python爬虫 & Scrapy框架 | MySQL & Redis | 数据分析 & 机器学习 | 网络编程 | 网站搭建 | 服务器部署 | Linux & 渗透测试 | 正则表达式 & 数据采集工具….</a>
 			</div>
 		</center>
 		<div id="outerdiv"
