--- a/index.html
+++ b/index.html
@@ -611,25 +611,25 @@
 									Blog
 								</a>
 							</li>
-							<li class="quick" data-s="GitHub" target="_blank" title="Island">
+							<li class="quick" data-s="GitHub" target="_blank" title="GitHub">
 								<a target=_blank href="https://github.com/">
 									<i style="background-image: url(./static/icon/github.ico);"></i>
 									GitHub
 								</a>
 							</li>
-							<li class="quick" data-s="Music" target="_blank" title="GitHub">
+							<li class="quick" data-s="Music" target="_blank" title="Music">
 								<a target=_blank rel="nofollow" href="http://demo443.com/music/">
 									<i style="background-image: url(./static/icon/music.png);"></i>
 									Music
 								</a>
 							</li>
-							<li class="quick" data-s="Tool" target="_blank" title="V2EX">
+							<li class="quick" data-s="Tool" target="_blank" title="Tool">
 								<a rel="nofollow" href="http://demo443.com/tool/">
 									<i style="background-image: url(./static/icon/home.png);"></i>
 									Tool
 								</a>
 							</li>
-							<li class="quick" data-s="哔哩哔哩" target="_blank" title="Steam">
+							<li class="quick" data-s="哔哩哔哩" target="_blank" title="哔哩哔哩">
 								<a target=_blank rel="nofollow" href="https://www.bilibili.com/">
 									<i style="background-image: url(./static/icon/bilibili.png);"></i>
 									哔哩哔哩
