--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
+	<!-- 灰色主题 -->
+	<!-- <html style="filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+	-webkit-filter: grayscale(100%);"> -->
 	<head>
 		<meta charset="UTF-8">
 		<!--begin seo-->
