--- a/index.html
+++ b/index.html
@@ -201,11 +201,73 @@
 											class="iconfont icon-xinlang" style="color: #e6162d;"></i>新浪邮箱</a></li>
 								<li><a rel="nofollow" href="https://qiye.aliyun.com/" target="_blank"><i
 											class="iconfont icon-yunyouxiang" style="color: #f15534;"></i>阿里邮箱</a></li>
+
+								<!------>
+
+								<li class="title"><i class="iconfont icon-msg"></i>Tool</li>
+								<li><a rel="nofollow" href="https://translate.google.cn/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #0084ff;"></i>谷歌翻译</a>
+								</li>
+								<li><a href="https://www.67tool.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #00f963;"></i>即时工具</a>
+								</li>
+								<li><a rel="nofollow" href="https://ps.gaoding.com/#/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #f15534;"></i>在线PS</a>
+								</li>
+
+								<li><a rel="nofollow" href="https://www.cleverpdf.com/cn" target="_blank"><i
+											class="iconfont icon-theater-masks"
+											style="color: #dfe64c;"></i>CleverPDF</a></li>
+								<li><a rel="nofollow" href="http://www.koovin.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #ff9020;"></i>库问搜索</a>
+								</li>
+
+								<li><a rel="nofollow" href="https://www.aconvert.com/cn/document/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #e230d9;"></i>转换文件</a>
+								</li>
+								<li><a rel="nofollow" href="https://www.pptsupermarket.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #9f2017;"></i>PPT市场</a>
+								</li>
+								<li><a rel="nofollow" href="http://www.dxzy163.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #00ffff;"></i>大学资源</a>
+								</li>
+								<li><a rel="nofollow" href="https://www.oalib.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #adb246;"></i>论文资源</a>
+								</li>
+								<li><a rel="nofollow" href="https://xmsoushu.com/#/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #afff6e;"></i>熊猫搜书</a>
+								</li>
+
+								<li><a rel="nofollow" href="https://zh.wikihow.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #aaff7f;"></i>万事指南</a>
+								</li>
+								<li><a rel="nofollow" href="https://search.chongbuluo.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #11caee;"></i>资源快搜</a>
+								</li>
+								<li><a rel="nofollow" href="https://shenzjd.com/shenzjd/tupian/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #eadf43;"></i>九帝壁纸</a>
+								</li>
+								<li><a rel="nofollow" href="https://bing.ioliu.cn/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #f5f539;"></i>必应壁纸</a>
+								</li>
+								<li><a rel="nofollow" href="https://zh.z-lib.org/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #aaff00;"></i>PDF书籍</a>
+								</li>
+								<li><a rel="nofollow" href="http://www.niuga.cn/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #f13016;"></i>视频解析1</a>
+								</li>
+								<li><a rel="nofollow" href="http://vip.aixc.cn/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #5d92fc;"></i>视频解析2</a>
+								</li>
+								<li><a rel="nofollow" href="https://airtest.netease.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #c518f4;"></i>图像自动化</a>
+								</li>
 								<!------>
 
 								<li class="title"><i class="iconfont icon-msg"></i>SNS</li>
-								<li><a href="https://mast.dragon-fly.club" target="_blank"><i class="iconfont "
-											style="color: #e6162d;"></i>Island 岛屿</a></li>
+								<li><a href="https://mast.dragon-fly.club" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #e6162d;"></i>Island
+										岛屿</a></li>
 								<li><a rel="nofollow" href="https://www.weibo.com" target="_blank"><i
 											class="iconfont icon-weibo" style="color: #e6162d;"></i>微博</a></li>
 								<li><a rel="nofollow" href="https://www.zhihu.com/" target="_blank"><i
@@ -237,45 +299,7 @@
 											class="iconfont icon-bili" style="color:#09e;"></i>哔哩哔哩</a></li>
 
 								<!------>
-								<li class="title"><i class="iconfont icon-gouwuche"></i>Shopping</li>
-								<li><a rel="nofollow" href="https://www.taobao.com" target="_blank">
-										<i class="iconfont icon-taobao" style="color: #ff6019;"></i>淘宝网</a></li>
-								<li><a rel="nofollow" href="https://temai.taobao.com/" target="_blank">
-										<i class="iconfont icon-temai" style="color: #ff6019;"></i>淘宝特卖</a></li>
-								<li><a rel="nofollow" href="https://www.pinduoduo.com/" target="_blank"><i
-											class="iconfont icon-99" style="color: #f83e3e;"></i>拼多多</a></li>
-								<li><a rel="nofollow" href="https://www.jd.com" target="_blank"><i
-											class="iconfont icon-jingdong" style="color: #e33333;"></i>京东</a></li>
-								<li><a rel="nofollow" href="https://www.suning.com/" target="_blank"><i
-											class="iconfont icon-suning" style="color: #f90;"></i>苏宁易购</a></li>
-								<li><a rel="nofollow" href="http://you.163.com/" target="_blank"><i
-											class="iconfont icon-yanxuan" style="color: #B4A078;"></i>网易严选</a></li>
-								<li><a rel="nofollow" href="https://www.amazon.cn/" target="_blank"><i
-											class="iconfont icon-amazon" style="color: #fc9b18;"></i>亚马逊</a></li>
-								<li><a rel="nofollow" href="http://www.dangdang.com/" target="_blank"><i
-											class="iconfont icon-dangdang" style="color: #ff2832;"></i>当当</a></li>
-								<li><a rel="nofollow" href="https://wat.dyartstyle.com/" target="_blank">
-										<i class="iconfont icon-taobao" style="color: #ff6019;"></i>吾爱淘</a></li>
-								<!------>
-								<li class="title"><i class="iconfont icon-sheji"></i>UX</li>
 
-								<li><a rel="nofollow" href="https://www.pinterest.com/" target="_blank"><i
-											class="iconfont icon-pinterest" style="color:#e02;"></i>Pinterest</a></li>
-								<li><a rel="nofollow" href="https://www.behance.net/" target="_blank"><i
-											class="iconfont icon-behance" style="color:#56f;"></i>Behance</a></li>
-								<li><a rel="nofollow" href="https://www.dribbble.com/" target="_blank"><i
-											class="iconfont icon-dribbble" style="color:#e48;"></i>Dribbble</a></li>
-								<li><a rel="nofollow" href="https://huaban.com/" target="_blank"><i
-											class="iconfont icon-huaban" style="color:#f06;"></i>花瓣</a></li>
-								<li><a rel="nofollow" href="https://www.zcool.com.cn/" target="_blank"><i
-											class="iconfont icon-zhanku" style="color:#f90;"></i>站酷</a></li>
-								<li><a rel="nofollow" href="https://www.iconfont.cn/" target="_blank"><i
-											class="iconfont icon-iconfont" style="color: #ff6019;"></i>阿里图标</a></li>
-								<li><a rel="nofollow" href="https://www.iconfinder.com/" target="_blank"><i
-											class="iconfont icon-eye"></i>IconFinder</a></li>
-								<li><a rel="nofollow" href="https://uiiiuiii.com/" target="_blank"><i
-											class="iconfont icon-jiaocheng" style="color:#0aa;"></i>优设教程</a></li>
-								<!------>
 								<li class="title"><i class="iconfont icon-ai-tool"></i>Widgets</li>
 								<li><a rel="nofollow" href="https://www.ip138.com/" target="_blank"><i
 											class="iconfont icon-wangluo" style="color: #02f;"></i>IP查询</a>
@@ -316,6 +340,47 @@
 								<li><a rel="nofollow" href="https://apkdl.in/" target="_blank"><i
 											class="iconfont icon-anzhuo" style="color:#094;"></i>APK下载</a></li>
 								<!------>
+
+								<li class="title"><i class="iconfont icon-gouwuche"></i>Shopping</li>
+								<li><a rel="nofollow" href="https://www.taobao.com" target="_blank">
+										<i class="iconfont icon-taobao" style="color: #ff6019;"></i>淘宝网</a></li>
+								<li><a rel="nofollow" href="https://temai.taobao.com/" target="_blank">
+										<i class="iconfont icon-temai" style="color: #ff6019;"></i>淘宝特卖</a></li>
+								<li><a rel="nofollow" href="https://www.pinduoduo.com/" target="_blank"><i
+											class="iconfont icon-99" style="color: #f83e3e;"></i>拼多多</a></li>
+								<li><a rel="nofollow" href="https://www.jd.com" target="_blank"><i
+											class="iconfont icon-jingdong" style="color: #e33333;"></i>京东</a></li>
+								<li><a rel="nofollow" href="https://www.suning.com/" target="_blank"><i
+											class="iconfont icon-suning" style="color: #f90;"></i>苏宁易购</a></li>
+								<li><a rel="nofollow" href="http://you.163.com/" target="_blank"><i
+											class="iconfont icon-yanxuan" style="color: #B4A078;"></i>网易严选</a></li>
+								<li><a rel="nofollow" href="https://www.amazon.cn/" target="_blank"><i
+											class="iconfont icon-amazon" style="color: #fc9b18;"></i>亚马逊</a></li>
+								<li><a rel="nofollow" href="http://www.dangdang.com/" target="_blank"><i
+											class="iconfont icon-dangdang" style="color: #ff2832;"></i>当当</a></li>
+								<li><a rel="nofollow" href="https://wat.dyartstyle.com/" target="_blank">
+										<i class="iconfont icon-taobao" style="color: #ff6019;"></i>吾爱淘</a></li>
+								<!------>
+								<li class="title"><i class="iconfont icon-sheji"></i>UX</li>
+
+								<li><a rel="nofollow" href="https://www.pinterest.com/" target="_blank"><i
+											class="iconfont icon-pinterest" style="color:#e02;"></i>Pinterest</a></li>
+								<li><a rel="nofollow" href="https://www.behance.net/" target="_blank"><i
+											class="iconfont icon-behance" style="color:#56f;"></i>Behance</a></li>
+								<li><a rel="nofollow" href="https://www.dribbble.com/" target="_blank"><i
+											class="iconfont icon-dribbble" style="color:#e48;"></i>Dribbble</a></li>
+								<li><a rel="nofollow" href="https://huaban.com/" target="_blank"><i
+											class="iconfont icon-huaban" style="color:#f06;"></i>花瓣</a></li>
+								<li><a rel="nofollow" href="https://www.zcool.com.cn/" target="_blank"><i
+											class="iconfont icon-zhanku" style="color:#f90;"></i>站酷</a></li>
+								<li><a rel="nofollow" href="https://www.iconfont.cn/" target="_blank"><i
+											class="iconfont icon-iconfont" style="color: #ff6019;"></i>阿里图标</a></li>
+								<li><a rel="nofollow" href="https://www.iconfinder.com/" target="_blank"><i
+											class="iconfont icon-eye"></i>IconFinder</a></li>
+								<li><a rel="nofollow" href="https://uiiiuiii.com/" target="_blank"><i
+											class="iconfont icon-jiaocheng" style="color:#0aa;"></i>优设教程</a></li>
+								<!------>
+
 								<li class="title"><i class="iconfont icon-kongzhitai"></i>Dev</li>
 								<li><a rel="nofollow" href="http://www.w3school.com.cn/" target="_blank"><i
 											class="iconfont icon-h5" style="color:#c03;"></i>W3school</a></li>
