--- a/index.html
+++ b/index.html
@@ -214,10 +214,28 @@
 								<li><a rel="nofollow" href="https://ps.gaoding.com/#/" target="_blank"><i
 											class="iconfont icon-theater-masks" style="color: #f15534;"></i>在线PS</a>
 								</li>
+								<li>
+									<a rel="nofollow" href="https://mm.edrawsoft.cn/app/create" target="_blank">
+									<i class="iconfont icon-theater-masks" style="color: #f737ce;"></i>亿图脑图</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://huatu.98youxi.com/markdown/" target="_blank">
+									<i class="iconfont icon-theater-masks" style="color: #ff2600;"></i>Markdown</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://huatu.98youxi.com/" target="_blank">
+									<i class="iconfont icon-theater-masks" style="color: #fdb90d;"></i>迅捷脑图</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://store.lizhi.io/" target="_blank">
+									<i class="iconfont icon-theater-masks" style="color: #ffff07;"></i>正版软件</a>
+								</li>
 
-								<li><a rel="nofollow" href="https://www.cleverpdf.com/cn" target="_blank"><i
-											class="iconfont icon-theater-masks"
-											style="color: #dfe64c;"></i>CleverPDF</a></li>
+								<li>
+									<a rel="nofollow" href="https://www.cleverpdf.com/cn" target="_blank">
+									<i class="iconfont icon-theater-masks" style="color: #dfe64c;"></i>CleverPDF</a>
+								</li>
+								
 								<li><a rel="nofollow" href="http://www.koovin.com/" target="_blank"><i
 											class="iconfont icon-theater-masks" style="color: #ff9020;"></i>库问搜索</a>
 								</li>
