--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@
 								<li><a rel="nofollow" href="https://airtest.netease.com/" target="_blank"><i
 											class="iconfont icon-theater-masks" style="color: #c518f4;"></i>图像自动化</a>
 								</li>
+								<li><a rel="nofollow" href="http://www.51nwt.com/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #3af406;"></i>内网通训</a>
+								</li>
 								<!------>
 
 								<li class="title"><i class="iconfont icon-msg"></i>SNS</li>
